# cython-abseil-sample

./: .gitignore  .gitmodules  CMakeLists.txt  absl.pxd  pyproject.toml  test_hello_cython.py
.github/workflows/: CI.yml
hello/: CMakeLists.txt  __init__.py  _hello.pyx
src/: CMakeLists.txt  absl.cc  absl.h
